infra/manifests/dex/gateway-dex.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: dex
spec:
  gatewayClassName: traefik
  listeners:
  - name: websecure
    port: 8443
    protocol: HTTPS
    hostname: dex.techwerkers.nl
    tls:
      mode: Terminate
      certificateRefs:
      - name: dex-tls
        namespace: dex
